# yt-dlp-rs

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  format.rs  lib.rs  main.rs  utils.rs  youtube_dl.rs
src/js_interp/: mod.rs
