[package]
name = "yt-dlp-rs"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
boa_engine = "0.21.0"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
fancy-regex = "0.17.0"
futures-util = "0.3.32"
indicatif = { version = "0.18.4", features = ["tokio"] }
rand = "0.8"
reqwest = { version = "0.13.2", features = ["rustls", "brotli", "gzip", "deflate", "cookies", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
tokio = { version = "1.50.0", features = ["fs", "full", "io-util"] }
url = "2.5.8"
